--- a/responsive.css
+++ b/responsive.css
@@ -18,9 +18,9 @@
         padding: 0.5rem;
     }
 
-    .minpad{
+/*     .minpad{
         padding: 1rem;
-    }
+    } */
 
     .subsBox{
         margin: 2rem 3rem;
